Fix: 0,0 위치 매핑되는 오류 수정